apps/ftu-ui/src/app/pages/landing-page/landing.component.scss
@use 'utils';
@use 'vars';

:host {
  display: block;

  .splash-wrapper {
    display: flex;
    position: relative;
    flex-direction: column;
    row-gap: 40px;
    margin: 0;
    min-height: 720px;
    height: auto;

    .splash-header-img {
      width: 100%;
      min-height: 720px;
      height: 100%;
      object-fit: cover;
      position: absolute;
      top: 0;
      left: 0;
      z-index: -1;
    }

    .splash-section {
      position: relative;
      display: flex;
      flex-direction: column;
      row-gap: 3.5rem;
      width: 100%;
      max-width: 46.25rem;
      min-width: 17rem;
      min-height: 34.625rem;
      padding: 7.5rem 2.5rem;
      margin-left: 6.875rem;

      .splash-content {
        display: flex;
        flex-direction: column;
        row-gap: 2rem;
      }

      .misc-logo {
        width: 4rem;
        height: 4rem;
      }

      .header {
        @include utils.use-font(display, large);
        color: vars.$on-background;
      }

      .description {
        font: vars.$body-xl;
        color: vars.$primary;
      }

      .actions {
        display: flex;
        flex-direction: row;
        column-gap: 2rem;
        flex-wrap: wrap;

        .action {
          @include utils.use-font(label, medium);
        }
      }
    }
  }

  .collaborators-wrapper {
    position: relative;
    display: flex;
    flex-direction: column;
    row-gap: 0.5rem;
    margin: 0;
    min-height: 720px;
    height: auto;

    .splash-header-img-2 {
      width: 100%;
      min-height: 720px;
      height: 100%;
      object-fit: cover;
      position: absolute;
      top: 0;
      left: 0;
      z-index: -1;
    }

    .collaborators-section {
      position: relative;
      display: flex;
      flex-direction: column;
      min-width: 17rem;
      max-width: 46.25rem;
      padding: 7.5rem 2.5rem;
      margin-left: min(48.75rem, 50%);
      row-gap: 3.5rem;

      .thankyou-container {
        display: flex;
        flex-direction: column;
        row-gap: 2rem;

        .thank-you-header {
          @include utils.use-font(headline, large);
          color: vars.$on-background;
        }

        .thank-you-description {
          font: vars.$body-xl;
          color: vars.$on-secondary-fixed;
        }
      }

      .logo-wrapper {
        display: flex;
        flex-direction: row;
        align-items: center;
        flex-wrap: wrap;
        min-width: 19.25rem;
        max-width: 21.75rem;
        gap: 4rem;

        .kpmp {
          width: 7.4375rem;
          height: 3.6875rem;
        }

        .partner {
          width: 8.3125rem;
          height: 2.5625rem;
        }
      }
    }
  }
}

@media (min-width: 40rem) and (max-width: 75rem) {
  :host {
    .collaborators-wrapper {
      .collaborators-section {
        margin-left: min(40%, 400px);
        padding: 96px 24px;
      }
    }
  }
}

@media (min-width: 20rem) and (max-width: 39.9375rem) {
  :host {
    .splash-wrapper {
      min-height: 900px;
      max-width: 1700px;
      row-gap: 8px;

      .splash-header-img {
        min-height: 900px;
      }

      .splash-section {
        row-gap: 56px;
        padding: 120px 20px;
        min-height: 554px;
        min-width: 272px;
        max-width: 740px;

        .splash-content {
          row-gap: 32px;
        }

        .actions {
          row-gap: 32px;
          column-gap: 1rem;

          .action {
            flex: none;
          }
        }
      }
    }

    .collaborators-wrapper {
      row-gap: 0.5rem;
      min-height: auto;

      .splash-header-img-2 {
        min-height: 900px;
      }

      .collaborators-section {
        padding: 96px 16px;
        margin-left: 0;
        min-width: 272px;
      }
    }
  }
}

::ng-deep .navigation {
  @media (min-width: 20rem) and (max-width: 39.9375rem) {
    display: none !important;
  }
}

